Changes in Version 0.0.3

  o plotRoute() can now include more than one session in one plot. The new
    function leafletRoute() uses the leaflet package to produce an
    interactive map.

  o Added a method for distribution and concentration profiles to fit a
    functional principal components analysis and a plot function to
    accompany it.

  o Added a second, shorter vignette "Tour de trackeR" to illustrate basic
    features and the new leafletRoute function.


Changes in Version 0.0.2

  o The scale options has been removed from the distribution profile and is
    now set-up as a separate operation. In this implementation first smoothing
    and then scaling (the right order for those operations) is possible.

  o Some improvements for trackeRdata(): session containing no information
    beyond the timestamps are removed; conversions between distance and
    speed now recognise the respective units.

  o Distribution profile: if all values of the variable for which the profile
    is to be calculated are missing, the profile (and its smoothed version)
    will also consist of only NA (rather than throwing an error).

  o Experimental support for reading Golden Cheetah's JSON files.


Changes in Version 0.0.1

  o First CRAN release of new "trackeR" package which provides
    infrastructure for handling running and cycling data from
    GPS-enabled tracking devices.
    See vignette("trackeR", package = "trackeR") for details.
