@@ -28,6 +28,11 @@ S3method(getUnits,distrProfile)
 S3method(getUnits,trackeRWprime)
 S3method(getUnits,trackeRdata)
 S3method(getUnits,trackeRdataSummary)
+S3method(nsessions,conProfile)
+S3method(nsessions,distrProfile)
+S3method(nsessions,trackeRdata)
+S3method(nsessions,trackeRdataSummary)
+S3method(nsessions,trackeRdataZones)
 S3method(plot,conProfile)
 S3method(plot,distrProfile)
 S3method(plot,trackeRWprime)
