@@ -2,19 +2,20 @@
 % Please edit documentation in R/trackeR.R
 \name{timeline}
 \alias{timeline}
-\title{Generic function for visualising the sessions on a time versus date plot}
+\title{Generic function for visualising the sessions on a time versus date plot.}
 \usage{
 timeline(object, lims, ...)
 }
 \arguments{
 \item{object}{An object of class trackeRdata or trackeRdataSummary}
 
-\item{lims}{An optional vector of two times in HH:MM format. Default is NULL. If supplied, the times are used to define the limits of the time axis.}
+\item{lims}{An optional vector of two times in HH:MM format. Default is NULL.
+If supplied, the times are used to define the limits of the time axis.}
 
 \item{...}{Arguments passed to \code{\link{summary.trackeRdata}}}
 }
 \description{
-Generic function for visualising the sessions on a time versus date plot
+Generic function for visualising the sessions on a time versus date plot.
 }
 \examples{
 \dontrun{
